# md-osi-fiscal-mx

./: .gitignore  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  METHODOLOGY.md  README.md
.github/workflows/: ci.yml
implementations/python/: README.md  pyproject.toml
implementations/python/md_osi_fiscal/: __init__.py  definitions.py
spec/domains/: .gitkeep  iva_cobrado.yaml
spec/reglas/: .gitkeep  RN-001-bucket-mxp-usd.yaml  RN-002-ncs-no-deducir.yaml  RN-003-tc-cfdi-prioridad.yaml  RN-004-dedup-reps-cancelados.yaml  RN-005-gold-celda-especifica.yaml
spec/schemas/: domain.schema.json  regla.schema.json
tests/: test_regla_loading.py
